--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ioredis": "^5.3.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
