--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,10 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.7.0",
     "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4",
+    "prisma": "^5.7.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   }
